--- a/css/booking.css
+++ b/css/booking.css
@@ -211,11 +211,22 @@ main .container .left .profile {
   margin-left: 1.5rem;
   font-size: 1rem;
 }
+.left .sidebar h3 a{
+  margin-left: 1.5rem;
+  font-size: 1rem;
+}
+
+.left .sidebar a h3{
+ color: var(--color-dark);
+}
 
 .left .sidebar .active {
     background: var(--color-light);
 }
 
+.left .sidebar .active i, .left .sidebar .active h3{
+    color: var(--color-primary);
+}
 .left .sidebar .active i, .left .sidebar .active h3{
     color: var(--color-primary);
 }
@@ -290,20 +301,6 @@ main .container .left .profile {
     gap: 0.5rem;
 }
 
-.middle .stories .story{
-   padding: var(--card-padding);
-   border-radius: var(--card-border-radius);
-   display: flex;
-   flex-direction: column;
-   justify-content: space-between;
-   align-items: center;
-   color: white;
-   font-size: 0.75rem;
-   width: 100%;
-   position: relative;
-   overflow: hidden;
-}
-
 .middle .stories .story::before{
     content: "";
     display: block;
@@ -318,31 +315,6 @@ main .container .left .profile {
     z-index: 2;
 }
 
-.middle .stories .story:nth-child(1) {
-    background: url(/data/story1.jpg) no-repeat center center/cover;
-}
-.middle .stories .story:nth-child(2) {
-    background: url(/data/story2.jpg) no-repeat center center/cover;
-}
-.middle .stories .story:nth-child(3) {
-    background: url(/data/story3.jpg) no-repeat center center/cover;
-}
-.middle .stories .story:nth-child(4) {
-    background: url(/data/story1.jpg) no-repeat center center/cover;
-}
-.middle .stories .story:nth-child(5) {
-    background: url(/data/story5.jpg) no-repeat center center/cover;
-}
-.middle .stories .story:nth-child(6) {
-    background: url(/data/story6.jpg) no-repeat center center/cover;
-}
-
-.middle .story .profile-photo{
-    width: 2rem;
-    height: 2rem;
-    align-self: start;
-    border: 3px solid var(--color-primary);
-}
 
 /*--------Create Post--------*/
 .middle .create-post {
@@ -353,7 +325,7 @@ main .container .left .profile {
     margin-top: 1rem;
     background: var(--color-white);
     padding: 0.4rem var(--card-padding);
-    border-radius:var(--border-radius) ;
+    border-radius:var(--border-radius);
 }
 
 .middle .create-post input[type="text"] {
@@ -375,52 +347,45 @@ main .container .left .profile {
     line-height: 1.5;
 }
 
-.middle .feed .head {
-    display: flex;
-    justify-content: space-between;
+.middle .feed .booking-data{
+    width: fit-content;
+    height: auto;
 }
 
-.middle .feed .user {
-    display: flex;
-    gap: 1rem;
+.booking-data .form-label{
+    margin-top: 2rem;
 }
 
-.middle .feed .photo{
-    border-radius: var(--card-border-radius);
-    overflow: hidden;
-    margin: 0.7rem 0;
-}
-
-.middle .feed .action-buttons {
-    display: flex;
-    justify-content: space-between;
+.booking-data .form-control{
+    position: relative;
     align-items: center;
-    font-size: 1.4rem;
-    margin: 0.6rem;
+    margin: 1rem 1rem 1rem 1rem;
 }
 
-.middle .liked-by {
-    display: flex;
+.booking-data a{
+    position: relative;
+    display: inline-block;
+    align-items: center;
 }
 
-.middle .liked-by span{
-    width: 1.4rem;
-    height: 1.4rem;
-    display: block;
-    border-radius: 50%;
-    overflow: hidden;
-    border: 2px solid var(--color-white);
-    margin-left: -0.6rem;
+
+.booking-data a .btn{
+    position: relative;
+    align-items: center;
 }
 
-.middle .liked-by span:first-child {
-    margin: 0;
+.booking-data a input{
+    background: var(--color-light);
+    border-radius: var(--border-radius);
+    padding: var(--btn-padding);
+    margin: 1rem;
 }
 
-.middle .liked-by p{
-    margin-left: 0.5rem;
+.booking-data a select{
+    background: var(--color-light);
+    border-radius: var(--border-radius);
+    padding: var(--btn-padding);
 }
-
 /*-----------------------right---------*/
 main .container .right{
     height: max-content;
@@ -759,6 +724,12 @@ main .container .right{
     .customize-theme .card{
         width: 92vw;
     }
+    .background h5{
+        display: none;
+    }
+
+
+
 }
 
 
